[PE] Fix paint offset of -webkit-background-clip: text under transform

BoxModelObjectPainter::PaintTextClipMask() is called from Paint() method
of some painter which has already adjusted for paint offset and paint
properties, so we should not go back to call box_model_.Paint() again,
but should call LineBoxListPainter instead. This fixes an old FIXME
which was too bad before we switched to SPv175 paint offsets.

Bug: 878685
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I78f3a82a133b14eb56dbeaf2b8b5f81041c0c59e
Reviewed-on: https://chromium-review.googlesource.com/1197462
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587771}
Former-commit-id: 876c69b24b5719bce12e24aae7a494997e038c74